打包异常处理